<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bluetoothoppnet.BTDeviceList" >

    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:title="@string/action_scan"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="101"
        android:title="@string/action_stop"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/action_set_scantime"
                android:orderInCategory="103"
                android:title="@string/action_set_scan_time"
                app:showAsAction="ifRoom|withText"/>
            <item
                android:id="@+id/action_set_scaninterval"
                android:orderInCategory="103"
                android:title="@string/action_set_scan_interval"
                app:showAsAction="ifRoom|withText"/>
        </menu>
    </item>

</menu>